<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="donations__button_close">"Close"</string>
    <string name="donations__description">"Do you find this application useful?
Support its development by sending a donation to the developer!"</string>
    <string name="donations__google_android_market">"Google Play Store"</string>
    <string name="donations__google_android_market_not_supported_title">"In-App Donations are not supported."</string>
    <string name="donations__google_android_market_not_supported">"In-App Donations are not supported. Is Google Play Store installed correctly?"</string>
    <string name="donations__google_android_market_description">"Google charges a fee of 30%"</string>
    <string name="donations__google_android_market_donate_button">"Donate!"</string>
    <string name="donations__google_android_market_text">"How much?"</string>
    <string name="donations__paypal">"PayPal"</string>
    <string name="donations__paypal_description">"You can choose how much you want to donate after clicking the button!"</string>
    <string name="donations__thanks_dialog_title">"Thanks!"</string>
    <string name="donations__thanks_dialog">"Thanks for donating!
I really appreciate this!"</string>
    <string name="donations__alert_dialog_title">"Error occurred"</string>
    <string name="donations__alert_dialog_no_browser">"No browser was found to open a website!"</string>
    <string name="donations__bitcoin">"Bitcoin"</string>
    <string name="donations__bitcoin_description">"Send any amount of bitcoin to the developer. Press and hold button to copy address."</string>
    <string name="donations__bitcoin_send_bitcoin_button">"Send bitcoin!"</string>
    <string name="donations__bitcoin_toast_copy">"Bitcoin address has been copied to the clipboard!"</string>
    <string name="donate_unavailable">"Unfortunately, you can't donate automatically right now. Please contact the developer to ask how to donate."</string>
</resources>