<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp" >

    <TextView
        android:id="@+id/donations__bitcoin_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donations__bitcoin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/donations__bitcoin_description"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/donations__bitcoin_description"
        android:textAppearance="@android:style/TextAppearance.Small"
        app:layout_constraintEnd_toStartOf="@id/donations__bitcoin_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/donations__bitcoin_title" />

    <Button
        android:id="@+id/donations__bitcoin_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/donations__bitcoin_send_bitcoin_button"
        app:layout_constraintStart_toEndOf="@id/donations__bitcoin_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/donations__bitcoin_description"/>

</androidx.constraintlayout.widget.ConstraintLayout>
