<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp" >

    <TextView
        android:id="@+id/donations__google_android_market_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donations__google_android_market"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/donations__google_android_market_description"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/donations__google_android_market_description"
        android:textAppearance="@android:style/TextAppearance.Small"
        app:layout_constraintTop_toBottomOf="@id/donations__google_android_market_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/donations__google_android_market_donate_button" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/donations__google_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="donations__google_android_market_description,donations__google_android_market_donate_button" />

    <Spinner
        android:id="@+id/donations__google_android_market_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/donations__google_android_market_text"
        app:layout_constraintTop_toBottomOf="@id/donations__google_android_market_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/donations__google_android_market_donate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donations__google_android_market_donate_button"
        app:layout_constraintTop_toBottomOf="@id/donations__google_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/donations__google_android_market_description"
        app:layout_constraintStart_toEndOf="@id/donations__google_android_market_description" />

</androidx.constraintlayout.widget.ConstraintLayout>
